Fixed an overflow issue, added logo, some other things I don't remember

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -6,9 +6,26 @@ html{
   font: normal 18px "Roboto", Helvetica, sans-serif;
 }
 
+.header{
+	width: 100%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+  grid-template-rows: 4em;
+	padding: 1em;
+	img{
+		grid-column: 1;
+		grid-row: 1;
+		height: 100%;
+	}
+}
+
 //index styles
+.container{
+	overflow: hidden;
+}
 
 .home-grid-wrapper{
+	width: 100%;
 	max-width: 1000px;
 	margin: 1em auto;
 	padding: 1em;
@@ -82,6 +99,23 @@ html{
 	}
 	.shape-2{
 		display: none;
+	}
+}//end home-grid-wrapper
+
+.work-grid{
+	position: relative;
+	background-color: white;
+	min-height: 2em;
+	&::before{
+		content: ' ';
+    position: absolute;
+    top: -2em;
+    left: -20%;
+    display: block;
+    width: 130%;
+    height: 10em;
+    background-color: white;
+    transform: rotate(-5deg);
 	}
 }
 
